# rek0n-embed

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: semantic_search.rs
examples/model/: README.md  model.sha256
scripts/: download_model.ps1  download_model.sh
src/: db.rs  index_config.rs  lib.rs  lock.rs  model.rs  types.rs
tests/: chunk_validation.rs  storage.rs
