[package]
name = "rek0n-embed"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["kon"]
description = "Local embedding and vector search for rek0n RAG indexing"
readme = "README.md"
license = "MIT"
repository = "https://github.com/K48N/rek0n-embed"
homepage = "https://github.com/K48N/rek0n-embed"
keywords = ["embeddings", "lancedb", "rag", "candle", "vector-search"]
categories = ["science", "database"]
exclude = ["/target"]

[lib]
name = "rek0n_embed"
path = "src/lib.rs"

[dependencies]
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.15"
lancedb = "0.30.0"
arrow-array = "58"
arrow-schema = "58"
futures-util = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
fs4 = { version = "0.12", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "semantic_search"
path = "examples/semantic_search.rs"

[package.metadata.docs.rs]
all-features = true
